fix dark mode patent style

--- a/content/pages/projects/style.css
+++ b/content/pages/projects/style.css
@@ -190,10 +190,11 @@ a.patent {
   main.projects {
     padding: 0 1.5rem;
   }
+}
 
-  @media (prefers-color-scheme: dark) {
-    a.patent {
-      background: rgb(84, 84, 0);
-    }
+@media (prefers-color-scheme: dark) {
+  a.patent {
+    background: #545400;
+    border: 1px solid yellow;
   }
 }
